<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView"
        android:textSize="@dimen/text_size"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView"
        android:textSize="@dimen/text_size"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView3"
        android:textSize="@dimen/text_size"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:background="@color/white"
        android:layout_above="@+id/btnStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/linearLayout3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:text="@string/Mark"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="15dp"
            android:textColor="@color/red"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="15dp"
            android:textColor="@color/red"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textView6"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textView7"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:id="@+id/btnStart"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_test"
        android:background="@drawable/test_button"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="@dimen/layout_vertical_margin_small" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collecting_frequency"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="right" >

                <TextView
                    android:id="@+id/time"
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <SeekBar
            android:id="@+id/timeline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:max="59"
            android:maxHeight="4.0dip"
            android:minHeight="4.0dip"
            android:paddingBottom="@dimen/layout_vertical_margin_small"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:background="@color/white"
            android:progressDrawable="@drawable/custom_seekbar"
            android:thumb="@drawable/seekbar_thumb" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="@dimen/layout_vertical_margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testTime"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="right" >

                <TextView
                    android:id="@+id/TestTime"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:textColor="@color/black"
                     >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <SeekBar
            android:id="@+id/TestTimeline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:max="24"
            android:maxHeight="4.0dip"
            android:minHeight="4.0dip"
            android:paddingBottom="@dimen/layout_vertical_margin_small"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:progressDrawable="@drawable/custom_seekbar"
            android:thumb="@drawable/seekbar_thumb"
            android:background="@color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/light_gray" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:background="@color/white"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/layout_vertical_margin_small"
        android:id="@+id/linearLayout3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveCsv"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="right" >

            <CheckBox
                android:id="@+id/SaveCSV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/custom_checkbox"
                android:button="@null"
                android:checked="false"
                android:gravity="right"
                android:paddingLeft="@dimen/image_padding"
                android:paddingRight="@dimen/image_padding"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>